# novel-agent

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/versions/: 0001_initial.py  0002_structured_memory.py  0003_model_config_snapshots.py  0004_model_usage_snapshots.py
backend/app/: main.py
backend/app/agent/: chapter_graph.py  project_graph.py  state.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/evals/: __init__.py  gold_cases.py  judge_cases.py  rag_cases.py  run.py
backend/app/models/: __init__.py  chapter.py  character.py  foreshadowing.py  generation.py  inspiration.py  memory.py  project.py  review.py
backend/app/repositories/: chapters.py  projects.py
backend/app/schemas/: chapter.py  generation.py  project.py
backend/app/services/: chapter_service.py  embeddings.py  evaluation.py  input_review.py  model_provider.py  model_usage.py  project_service.py  prompt_versions.py  provider_factory.py  token_counter.py  (+4 more)
backend/tests/: conftest.py  test_author_loop.py  test_auto_generation.py  test_chapter_generation.py  test_context_budget.py  test_evaluation.py  test_generation_recovery.py  test_input_review.py  test_model_provider.py  test_model_routing.py  test_model_switching.py  test_model_usage.py  test_models.py  test_project_api.py  test_project_graph.py  test_prompt_versions.py  test_provider_factory.py  test_retrieval.py  test_structured_memory.py  test_token_counter.py  test_tool_registry.py  test_trace_builder.py  test_training_data.py
(+80 files in other folders)
