[project]
name = "novel-agent-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.115.0",
  "langgraph>=0.2.60",
  "psycopg[binary]>=3.2.3",
  "pydantic-settings>=2.6.0",
  "qdrant-client>=1.12.0",
  "sentence-transformers>=3.3.1",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
